🐛 fix bug for certain php errors & password validation ux

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,5 @@ NISN="0000000"
 NPSN="0000000"
 TGL_LAHIR="08/08/2008"
 EMAIL="example@example.com"
+# Password minimal 8 karakter dan hanya boleh HURUF dan ANGKA saja, tidak boleh simbol. Pastikan password berbeda dengan akun Anda lainnya.
 PASSWORD="abcd1234"
