--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
+# File ini digunakan untuk registrasi otomatis. Pastikan data yang diisi benar.
 NISN="0000000"
 NPSN="0000000"
+# Format tanggal lahir: DD/MM/YYYY Contoh: 08/08/2020
 TGL_LAHIR="08/08/2008"
 EMAIL="example@example.com"
 # Password minimal 8 karakter dan hanya boleh HURUF dan ANGKA saja, tidak boleh simbol. Pastikan password berbeda dengan akun Anda lainnya.
