--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,37 @@
-.env
-yarn-error.log
-yarn.lock
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
 
+# Env Variables
+.env
+
+# Per-user data
 registerPart1.html
 registerPart2.html
+registerPart1-backup.html
 
-node_modules
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Locks
+yarn.lock
+package-lock.json
+
+# Yarn Integrity file
+.yarn-integrity
+
+# yarn v2
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
