--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
 	"name": "autoregister-ltmpt-2022",
 	"type": "module",
 	"version": "1.0.0",
-	"main": "index.js",
+	"main": "register.js",
 	"license": "MIT",
 	"dependencies": {
 		"dotenv": "^11.0.0",
 		"jsdom": "^19.0.0",
 		"node-fetch": "^3.1.0"
+	},
+	"devDependencies": {
+		"eslint": "^8.6.0"
 	}
 }
