--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ lerna-debug.log*
 registerPart1.html
 registerPart2.html
 registerPart1-backup.html
+errorReport.html
 
 # Dependency directories
 node_modules/
