--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-	"name": "autoregister-ltmpt-2022",
-	"type": "module",
-	"version": "1.0.0",
-	"main": "register.js",
-	"license": "MIT",
-	"dependencies": {
-		"dotenv": "^11.0.0",
-		"jsdom": "^19.0.0",
-		"node-fetch": "^3.1.0"
-	},
-	"devDependencies": {
-		"eslint": "^8.6.0"
-	}
+    "name": "autoregister-ltmpt-2022",
+    "type": "module",
+    "version": "2.0.0",
+    "main": "register.js",
+    "license": "MIT",
+    "dependencies": {
+        "chalk": "^5.0.0",
+        "dotenv": "^11.0.0",
+        "jsdom": "^19.0.0",
+        "node-fetch": "^3.1.0",
+        "ora": "^6.0.1"
+    },
+    "devDependencies": {
+        "eslint": "^8.6.0"
+    }
 }
