--- a/.github/workflows/bump_and_release.yml
+++ b/.github/workflows/bump_and_release.yml
@@ -26,7 +26,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          default: prerelease
+          patch-wording: "fix,fixes,patch"
 
       - id: "yarn-cache"
         run: echo "::set-output name=dir::$(yarn cache dir)"
