--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   bump_and_release:
-    runs-on: "ubuntu-latest"
+    runs-on: "windows-latest"
     env:
       JEST_VERBOSE: ${{ secrets.JEST_VERBOSE }}
 
@@ -27,7 +27,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           patch-wording: "fix,fixes,patch"
-
+      - name: "Checkout source code"
+        uses: "actions/checkout@v2.3.4"
+        with:
+          lfs: true
+          fetch-depth: 0
       - id: "yarn-cache"
         run: echo "::set-output name=dir::$(yarn cache dir)"
       - uses: "actions/cache@v2.1.6"
