--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,9 @@ jobs:
         with:
           lfs: true
           fetch-depth: 0
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '17'
       - id: "yarn-cache"
         run: echo "::set-output name=dir::$(yarn cache dir)"
       - uses: "actions/cache@v2.1.6"
